--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "analyzer" :"use_analyzer=true npm run serve",
+    "analyzer": "use_analyzer=true npm run serve",
     "gh-pages": "gh-pages -a -d dist --remote origin -b gh-pages -r https://github.com/weirui88888/itc.git"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
     "moment": "^2.24.0",
@@ -18,8 +19,7 @@
     "vue": "^2.6.10",
     "vue-cropper": "^0.4.9",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1",
-    "axios": "^0.19.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
