--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "dev": "./node_modules/.bin/nodemon bin/www",
+    "dev": "nodemon bin/www",
     "prd": "pm2 start bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,6 +31,10 @@
     "xss": "^1.0.6"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "nodemon": "^1.19.4"
+  },
+  "volta": {
+    "node": "16.18.0"
   }
 }
