--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
+  "printWidth": 120,
+  "endOfLine": "lf",
   "semi": false,
-  "singleQuote": true
+  "trailingComma": "none",
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "tabWidth": 2,
+  "quoteProps": "as-needed"
 }
